--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,7 +15,7 @@ on:
       - ready_for_review
 
 concurrency:
-  group: pipeline-go-module-small-${{ github.ref }}
+  group: pipeline-slackparser-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.18"
+          go-version: "1.19"
       - name: Go Mod Tidy
         run: |
           go mod tidy
@@ -60,7 +60,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.18"
+          go-version: "1.19"
       - name: Install Dependencies
         run: go mod download
       - name: Go Vet
@@ -73,7 +73,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.18"
+          go-version: "1.19"
       - name: Go Field Alignment
         run: |
           go install golang.org/x/tools/go/analysis/passes/fieldalignment/cmd/fieldalignment@latest
@@ -85,7 +85,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go: [1.17.x, 1.18.x]
+        go: [1.18.x, 1.19.x, 1.20.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
